[FIX] header z-index

--- a/app/assets/stylesheets/mobile/mobile.css.scss
+++ b/app/assets/stylesheets/mobile/mobile.css.scss
@@ -265,6 +265,7 @@ header {
   transform: translatez(0);
   text-align: center;
   width: 100%;
+  z-index: 20;
 }
 
 header .header-button {
